data/derived/sp14/progs/unify/prog4306.ml.out
Characters 31-48:
  let rec fixpoint (f,b) = wwhile(f, (f b = b), b);;
                                 ^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type ('d -> 'd * bool) * 'd
